--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Richard\\Desktop\\ml_course\\env\\python.exe"
+    "python.pythonPath": "C:\\Users\\Richard\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
